Use built-in outline renderer